--- a/board/src/main/webapp/WEB-INF/web.xml
+++ b/board/src/main/webapp/WEB-INF/web.xml
@@ -32,5 +32,9 @@
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
 
+    <welcome-file-list>
+        <welcome-file>home.xhtml</welcome-file>
+    </welcome-file-list>
+
 
 </web-app>
