--- a/board/src/main/webapp/WEB-INF/web.xml
+++ b/board/src/main/webapp/WEB-INF/web.xml
@@ -33,7 +33,7 @@
     </servlet-mapping>
 
     <welcome-file-list>
-        <welcome-file>home.xhtml</welcome-file>
+        <welcome-file>driver.xhtml</welcome-file>
     </welcome-file-list>
 
 
