--- a/board/pom.xml
+++ b/board/pom.xml
@@ -111,6 +111,14 @@
             <version>1.4.1</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>8.0</version>
+        </dependency>
+
+
         <dependency>
             <groupId>javax.faces</groupId>
             <artifactId>jsf-api</artifactId>
