--- a/board/pom.xml
+++ b/board/pom.xml
@@ -136,7 +136,11 @@
             <version>0.99</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
 
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
